Add vendor ID for distribution to JetBrains plugin repo

--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,7 @@
         <id>com.dslfoundry.plaintextgen</id>
         <name>com.dslfoundry.plaintextgen</name>
         <version>1.0</version>
+        <vendor url="http://dslfoundry.com/">DSLFoundry</vendor>
         <depends>jetbrains.mps.core</depends>
         
         <extensions defaultExtensionNs="com.intellij">
